<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CALCULADORA"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.127"
        tools:text="@string/app_name" />

    <Button
        android:id="@+id/btn_suma"
        android:layout_width="162dp"
        android:layout_height="68dp"
        android:backgroundTint="#91C5CC"
        android:onClick="suma"
        android:text="SUMA"
        android:textColor="#121111"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:iconTint="#8CCBD3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.66"
        tools:text="@string/button1" />

    <Button
        android:id="@+id/btn_resta"
        android:layout_width="162dp"
        android:layout_height="68dp"
        android:backgroundTint="#91C5CC"
        android:onClick="resta"
        android:text="RESTA"
        android:textColor="#0B0A0A"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.883"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.672"
        tools:text="@string/button2" />

    <Button
        android:id="@+id/btn_mult"
        android:layout_width="162dp"
        android:layout_height="68dp"
        android:backgroundTint="#91C5CC"
        android:onClick="multiplicacion"
        android:text="MULTIPLICACIÓN"
        android:textColor="#0C0C0C"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.78"
        tools:text="@string/button3" />

    <Button
        android:id="@+id/btn_div"
        android:layout_width="162dp"
        android:layout_height="68dp"
        android:backgroundTint="#91C5CC"
        android:onClick="division"
        android:text="DIVISON"
        android:textColor="#0B0A0A"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.883"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.78"
        tools:text="@string/button4" />

    <ImageView
        android:id="@+id/calculadora"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.241"
        app:srcCompat="@drawable/calculadora" />

    <EditText
        android:id="@+id/numero1"
        android:layout_width="304dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/dato1"
        android:inputType="number"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.442"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/numero2"
        android:layout_width="304dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/dato2"
        android:inputType="number"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.519"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>